# clamav-api-rs

./: .gitmodules  Cargo.toml  Dockerfile  clamd.conf  docker-compose.yml  freshclam.conf
src/: main.rs
